[package]
name = "pwdmngr-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["canvas", "tokio"] }
clap = { version = "4.0", features = ["derive"] }
rpassword = "7.3"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
argon2 = "0.5"
tokio = { version = "1.0", features = ["full"] }